--- a/Tokeniser/tokeniser.ipynb
+++ b/Tokeniser/tokeniser.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPd3AJcHG7o/XlKfmxXjO87",
+      "authorship_tag": "ABX9TyPhWq642LtAHtKwlYzjMhye",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2568,25 +2568,106 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Types of Tokenization\n",
-        "#### Word Tokenization\n",
-        "- What is word tokenization, and when is it most effectively used?\n",
-        "- How does word tokenization handle different languages and dialects?\n",
+        "## Types of Tokenization"
+      ],
+      "metadata": {
+        "id": "EBYs3ukfAc57"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Word Tokenization"
+      ],
+      "metadata": {
+        "id": "Edpbhhf5CKt9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Word tokenization involves splitting a piece of text into individual words using spaces and punctuation as delimiters. It's most effectively used in tasks requiring the analysis or manipulation of text at the word level, such as frequency analysis, word embeddings for machine learning models, and simple text classification tasks.\n",
         "\n",
-        "#### Sentence Tokenization\n",
-        "- How does sentence tokenization differ from word tokenization?\n",
-        "- In what scenarios is sentence tokenization preferred over word tokenization?\n",
+        "**Example tokenizers names**\n",
+        "- NLTK's `word_tokenize`\n",
+        "- spaCy's Tokenizer\n",
+        "- Apache OpenNLP's `TokenizerME`"
+      ],
+      "metadata": {
+        "id": "o9vU5cApCKrI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Character Tokenization"
+      ],
+      "metadata": {
+        "id": "Hz-_gzMECkWz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Character tokenization is used in tasks where understanding or manipulating text at the most granular level is crucial. This includes certain types of text classification, language modeling where understanding of individual characters is important, and tasks in languages where the concept of a \"word\" is not straightforward.\n",
         "\n",
-        "#### Subword Tokenization\n",
-        "- What challenges does subword tokenization address?\n",
-        "- How does subword tokenization balance the trade-offs between word tokenization and character tokenization?\n",
+        "The main limitations include a potential loss of semantic information (since characters carry less meaning than words or subwords) and increased computational complexity, as models may need to process significantly longer sequences compared to word or subword tokenization.\n",
         "\n",
-        "#### Character Tokenization\n",
-        "- Under what circumstances is character tokenization used?\n",
-        "- What are the limitations of character tokenization?"
+        "**Example**\n",
+        "- Custom character tokenizers built for specific tasks or languages"
       ],
       "metadata": {
         "id": "5wNKz9cYiX6d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Subword Tokenization"
+      ],
+      "metadata": {
+        "id": "ykBRpRLOCfel"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Subword tokenization addresses challenges such as handling out-of-vocabulary (OOV) words by breaking down words into smaller, meaningful units (subwords) that are more likely to be seen during training. It also helps in representing a large vocabulary more compactly and efficiently, which is particularly useful in languages with rich morphology or agglutinative languages.\n",
+        "\n",
+        "Subword tokenization balances the granularity of character tokenization (high granularity but low semantic information) and the semantic richness of word tokenization (high semantic information but poor handling of OOV words). It allows models to understand and generate text more effectively by leveraging the semantic meaning of subword units while mitigating the issues associated with large vocabularies and OOV words.\n",
+        "\n",
+        "**Example**\n",
+        "- BERT's WordPiece\n",
+        "- GPT-2's BPE (Byte Pair Encoding)\n",
+        "- SentencePiece (supports both BPE and unigram language model)"
+      ],
+      "metadata": {
+        "id": "CCljL5UvCfUY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Sentence Tokenization"
+      ],
+      "metadata": {
+        "id": "Kbp38sA0CXjO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Sentence tokenization splits text into individual sentences, taking into account punctuation marks that denote sentence boundaries, such as periods, exclamation marks, and question marks. It requires understanding the context to correctly interpret these punctuation marks (e.g., distinguishing between a period indicating an abbreviation and one ending a sentence).\n",
+        "\n",
+        "Sentence tokenization is preferred in scenarios where the unit of analysis or manipulation is the sentence, such as in natural language generation, summarization, machine translation, or when sentences are used as input for sentence-level sentiment analysis.\n",
+        "\n",
+        "**Example**\n",
+        "- NLTK's `sent_tokenize`\n",
+        "- spaCy (utilizes document object, which contains sentence objects)\n",
+        "- Apache OpenNLP's `SentenceDetectorME`"
+      ],
+      "metadata": {
+        "id": "6HW9bX58CXYb"
       }
     },
     {
@@ -2599,6 +2680,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Advanced Tokenization Techniques"
+      ],
+      "metadata": {
+        "id": "A9uf0wJgAQ4L"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "! pip install transformers tensorflow numpy -q"
@@ -2606,7 +2696,7 @@
       "metadata": {
         "id": "82Q9IWnezDBm"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2621,7 +2711,7 @@
       "metadata": {
         "id": "AYGRYn423bdo"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2695,7 +2785,7 @@
         "id": "zSs6bLLYzaoL",
         "outputId": "d1f5ed35-71e5-4822-c4c6-71317e22f04c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2835,7 +2925,7 @@
         "id": "NmeMrg5J3LMb",
         "outputId": "804b8812-cceb-4797-e42e-d9b273691e57"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3016,7 +3106,7 @@
         "id": "Ep8eaMVa3rqz",
         "outputId": "cada0e40-01ab-4d79-a9a1-6f536a954968"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3096,12 +3186,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Conclusion\n",
-        "- Why is staying updated with the latest developments in tokenization important for data scientists working in NLP?\n",
-        "- How can data scientists continue to learn about and experiment with new tokenization techniques?"
+        "## Conclusion"
       ],
       "metadata": {
         "id": "Q6HMHxCKuzn1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tokenization is a critical preprocessing step in Natural Language Processing (NLP) that transforms raw text into structured formats usable by machine learning models.\n",
+        "\n",
+        "Each tokenization method — word, sentence, subword, and character — addresses specific challenges and is suited for different NLP tasks.\n",
+        "\n",
+        "The choice of tokenization method significantly impacts the performance of NLP applications, making it essential to match the tokenization strategy with the specific needs of each task and the characteristics of the language being processed."
+      ],
+      "metadata": {
+        "id": "ceoTa0k-C5th"
       }
     }
   ]
