tokenizer notebook updated

--- a/Tokeniser/tokeniser.ipynb
+++ b/Tokeniser/tokeniser.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPhWq642LtAHtKwlYzjMhye",
+      "authorship_tag": "ABX9TyPetnKu36ap83nZ+tU8yAVz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2677,6 +2677,132 @@
       ],
       "metadata": {
         "id": "p6mRiIorOkE_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Python offers a wealth of libraries and tools designed to support various aspects of Natural Language Processing (NLP), including tokenization."
+      ],
+      "metadata": {
+        "id": "LC2dIZuoFC7s"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1. **NLTK (Natural Language Toolkit)**\n",
+        "\n",
+        "- **Approach:** NLTK is one of the most widely-used libraries for NLP in Python and provides a comprehensive suite of text processing libraries for classification, tokenization, stemming, tagging, parsing, and semantic reasoning. It offers multiple tokenizers with varying complexity, from simple whitespace tokenizers to sophisticated regular expression tokenizers.\n",
+        "- **Use Cases:** Ideal for educational purposes and prototyping due to its wide range of functionalities and ease of use.\n",
+        "\n",
+        "```python\n",
+        "import nltk\n",
+        "nltk.download('punkt')  # Download necessary datasets\n",
+        "from nltk.tokenize import word_tokenize\n",
+        "\n",
+        "text = \"Hello there! How are you doing today?\"\n",
+        "tokens = word_tokenize(text)\n",
+        "print(tokens)\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "O6mh3RCPFgtm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 2. **spaCy**\n",
+        "\n",
+        "- **Approach:** spaCy is known for its speed and efficiency. It adopts an object-oriented approach and treats text as an object, which allows for more sophisticated processing. spaCy's tokenizer is highly optimized and can be extended with custom rules. It’s designed for production use and supports a wide range of NLP tasks.\n",
+        "- **Use Cases:** Best suited for production-grade applications requiring fast and efficient text processing.\n",
+        "\n",
+        "```python\n",
+        "import spacy\n",
+        "nlp = spacy.load(\"en_core_web_sm\")  # Load the English model\n",
+        "\n",
+        "text = \"Hello there! How are you doing today?\"\n",
+        "doc = nlp(text)\n",
+        "tokens = [token.text for token in doc]\n",
+        "print(tokens)\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "noQtsMeaFj1o"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3. **TextBlob**\n",
+        "\n",
+        "- **Approach:** TextBlob is built on top of NLTK and Pattern. It's simpler and more user-friendly, providing an intuitive API for common NLP tasks, including tokenization. TextBlob's tokenization is more straightforward, primarily focusing on ease of use and accessibility.\n",
+        "- **Use Cases:** Great for beginners and those interested in quickly prototyping applications or scripts involving NLP.\n",
+        "\n",
+        "```python\n",
+        "from textblob import TextBlob\n",
+        "\n",
+        "text = \"Hello there! How are you doing today?\"\n",
+        "blob = TextBlob(text)\n",
+        "tokens = blob.words  # For word tokenization\n",
+        "sentences = blob.sentences  # For sentence tokenization\n",
+        "print(tokens)\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "BENMJHtsFmsO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 4. **Gensim**\n",
+        "\n",
+        "- **Approach:** Gensim is focused on topic modeling and document similarity. While not primarily known for tokenization, it does offer simple preprocessing capabilities that can tokenize and clean text. Gensim is optimized for handling large text corpora.\n",
+        "- **Use Cases:** Ideal for projects focusing on topic modeling, document indexing, and similarity retrieval.\n",
+        "\n",
+        "```python\n",
+        "from gensim.utils import tokenize\n",
+        "\n",
+        "text = \"Hello there! How are you doing today?\"\n",
+        "tokens = list(tokenize(text))\n",
+        "print(tokens)\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "H4zKTdmYFpcs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "### 5. **Keras**\n",
+        "\n",
+        "- **Approach:** Keras, a deep learning library, provides utilities for text preprocessing, including tokenization, primarily aimed at preparing text data for neural network models. Its `Tokenizer` class offers a high-level API for vectorizing text into sequences or matrices.\n",
+        "- **Use Cases:** Best suited for deep learning projects requiring text data preprocessing for model training.\n",
+        "\n",
+        "```python\n",
+        "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+        "\n",
+        "texts = [\"Hello there! How are you doing today?\"]\n",
+        "tokenizer = Tokenizer(num_words=100)\n",
+        "tokenizer.fit_on_texts(texts)\n",
+        "sequences = tokenizer.texts_to_sequences(texts)\n",
+        "print(sequences)\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "dKsbpQ4zE9Xl"
       }
     },
     {
