--- a/Tokeniser/tokeniser.ipynb
+++ b/Tokeniser/tokeniser.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP97/pjzqiOYfg17+KvDoRq",
+      "authorship_tag": "ABX9TyOZeVGjtDwa/p2JPviiheKJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2760,11 +2760,11 @@
         "print(punctuation_count)"
       ],
       "metadata": {
-        "id": "qnRIcIBXICVJ",
-        "outputId": "f27640a7-7c74-4174-ade6-ee9e00e15c2f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qnRIcIBXICVJ",
+        "outputId": "f27640a7-7c74-4174-ade6-ee9e00e15c2f"
       },
       "execution_count": 2,
       "outputs": [
@@ -2873,11 +2873,11 @@
         "print(shapes)"
       ],
       "metadata": {
-        "id": "kPaHns_5JJBo",
-        "outputId": "48d0ba59-e9cb-4120-a0c6-4a41f17bcdd0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kPaHns_5JJBo",
+        "outputId": "48d0ba59-e9cb-4120-a0c6-4a41f17bcdd0"
       },
       "execution_count": 3,
       "outputs": [
@@ -2930,11 +2930,11 @@
         "! python -m textblob.download_corpora"
       ],
       "metadata": {
-        "id": "MaQiwAWIJ4QJ",
-        "outputId": "d276d6da-d542-442a-848c-e729871ed90d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MaQiwAWIJ4QJ",
+        "outputId": "d276d6da-d542-442a-848c-e729871ed90d"
       },
       "execution_count": 5,
       "outputs": [
@@ -2998,11 +2998,11 @@
         "print(noun_phrases)"
       ],
       "metadata": {
-        "id": "g9x3MtkgJmXR",
-        "outputId": "5e1c66e3-3df2-4c7b-92ea-77f567ac6871",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "g9x3MtkgJmXR",
+        "outputId": "5e1c66e3-3df2-4c7b-92ea-77f567ac6871"
       },
       "execution_count": 7,
       "outputs": [
@@ -3096,11 +3096,11 @@
         "print(list(enumerate(sims)))"
       ],
       "metadata": {
-        "id": "Oro0jGZdKtoX",
-        "outputId": "34b922c3-6365-4e93-dd35-9fcb79bf77ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Oro0jGZdKtoX",
+        "outputId": "34b922c3-6365-4e93-dd35-9fcb79bf77ae"
       },
       "execution_count": 8,
       "outputs": [
@@ -3638,6 +3638,306 @@
       ],
       "metadata": {
         "id": "yi51RhUOLu7C"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To demonstrate how BERT addresses the four outlined NLP situations, let's use the `transformers` library.\n",
+        "\n",
+        "Each example will be specifically tailored to showcase BERT's capabilities in handling context, polysemy, nuanced sentiment analysis, and named entity recognition (NER)."
+      ],
+      "metadata": {
+        "id": "ZaCQDbigOAxi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1. Understanding Context - Problem: Homonyms - \"bank\" in different contexts\n"
+      ],
+      "metadata": {
+        "id": "LR_DD80iOF_t"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import pipeline\n",
+        "\n",
+        "nlp = pipeline(\"fill-mask\", model=\"bert-base-uncased\")\n",
+        "\n",
+        "# Homonym example: \"bank\"\n",
+        "print(nlp(f\"I went to the river {nlp.tokenizer.mask_token} to fish.\"))\n",
+        "print(nlp(f\"I need to go to the {nlp.tokenizer.mask_token} to deposit some money.\"))"
+      ],
+      "metadata": {
+        "id": "U6SvekGNOOFW",
+        "outputId": "245aa843-5682-4235-8aa9-0ded3c3a4bc1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForMaskedLM: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight']\n",
+            "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+            "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[{'score': 0.14853408932685852, 'token': 1010, 'token_str': ',', 'sequence': 'i went to the river, to fish.'}, {'score': 0.13222599029541016, 'token': 9299, 'token_str': '##bank', 'sequence': 'i went to the riverbank to fish.'}, {'score': 0.09671077877283096, 'token': 2924, 'token_str': 'bank', 'sequence': 'i went to the river bank to fish.'}, {'score': 0.038397036492824554, 'token': 2314, 'token_str': 'river', 'sequence': 'i went to the river river to fish.'}, {'score': 0.035185620188713074, 'token': 2074, 'token_str': 'just', 'sequence': 'i went to the river just to fish.'}]\n",
+            "[{'score': 0.9670138359069824, 'token': 2924, 'token_str': 'bank', 'sequence': 'i need to go to the bank to deposit some money.'}, {'score': 0.005214449483901262, 'token': 3573, 'token_str': 'store', 'sequence': 'i need to go to the store to deposit some money.'}, {'score': 0.004053874406963587, 'token': 5085, 'token_str': 'banks', 'sequence': 'i need to go to the banks to deposit some money.'}, {'score': 0.0017931647598743439, 'token': 27218, 'token_str': 'atm', 'sequence': 'i need to go to the atm to deposit some money.'}, {'score': 0.0013757208362221718, 'token': 3309, 'token_str': 'hotel', 'sequence': 'i need to go to the hotel to deposit some money.'}]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Understanding Context**:\n",
+        "\n",
+        "The given outputs from the BERT model illustrate its contextual understanding capabilities when dealing with the word \"bank\" in different sentences:\n",
+        "\n",
+        "\n",
+        "**First Example: Context of \"bank\" near a river**\n",
+        "\n",
+        "- **Top Predictions:**\n",
+        "  - `,` (Comma) - It seems like a continuation or listing, which is less relevant.\n",
+        "  - `##bank` - This prediction, combined with \"river\" as \"riverbank\", is a strong indicator that BERT can piece together compound words to fit the context appropriately.\n",
+        "  - `bank` - Correctly identifies \"bank\" in the context of a river, showcasing BERT's understanding that in the context of \"river\", \"bank\" is likely referring to the land alongside or sloping down to a river.\n",
+        "  - `river` - Suggesting repetition, possibly less accurate in this context.\n",
+        "  - `just` - A filler word, less relevant in this context.\n",
+        "\n",
+        "    The correct prediction here, `bank` and its variant `##bank`, demonstrates BERT's ability to understand \"bank\" in the natural context of a riverbank, an area alongside a river.\n",
+        "\n",
+        "\n",
+        "**Second Example: Context of \"bank\" as a financial institution**\n",
+        "\n",
+        "- **Top Predictions:**\n",
+        "  - `bank` - The overwhelmingly high score for \"bank\" in this context signifies BERT's confidence in \"bank\" being a place to deposit money, illustrating its grasp of \"bank\" as a financial institution.\n",
+        "  - `store`, `banks`, `atm`, `hotel` - Other predictions are contextually related places where financial transactions might occur or are associated with money, but \"bank\" is the clear winner in context relevance."
+      ],
+      "metadata": {
+        "id": "ldF8RBOvO5bP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 2. Handling Polysemy and Homophones - Problem: Different meanings of \"read\" based on tense"
+      ],
+      "metadata": {
+        "id": "7ADb5oPaOS7F"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nlp = pipeline(\"fill-mask\", model=\"bert-base-uncased\")\n",
+        "\n",
+        "# Polysemy example: \"read\" in different tenses\n",
+        "print(nlp(f\"She {nlp.tokenizer.mask_token} a book yesterday.\"))\n",
+        "print(nlp(f\"I love to {nlp.tokenizer.mask_token} books.\"))"
+      ],
+      "metadata": {
+        "id": "cv2iFshqOZK2",
+        "outputId": "80a8c8ed-996e-46b7-dc0b-9184393235fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForMaskedLM: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight']\n",
+            "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+            "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[{'score': 0.15060098469257355, 'token': 2626, 'token_str': 'wrote', 'sequence': 'she wrote a book yesterday.'}, {'score': 0.12720878422260284, 'token': 3191, 'token_str': 'read', 'sequence': 'she read a book yesterday.'}, {'score': 0.11582888662815094, 'token': 4149, 'token_str': 'bought', 'sequence': 'she bought a book yesterday.'}, {'score': 0.07155139744281769, 'token': 2018, 'token_str': 'had', 'sequence': 'she had a book yesterday.'}, {'score': 0.06543827056884766, 'token': 2179, 'token_str': 'found', 'sequence': 'she found a book yesterday.'}]\n",
+            "[{'score': 0.971741259098053, 'token': 3191, 'token_str': 'read', 'sequence': 'i love to read books.'}, {'score': 0.01527475193142891, 'token': 4339, 'token_str': 'write', 'sequence': 'i love to write books.'}, {'score': 0.0011095426743850112, 'token': 3422, 'token_str': 'watch', 'sequence': 'i love to watch books.'}, {'score': 0.0010607774602249265, 'token': 2817, 'token_str': 'study', 'sequence': 'i love to study books.'}, {'score': 0.0009369474719278514, 'token': 2293, 'token_str': 'love', 'sequence': 'i love to love books.'}]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Handling Polysemy and Homophones:**\n",
+        "\n",
+        "The outputs from BERT's predictions on sentences with the masked token effectively demonstrate its nuanced understanding of polysemy (words with multiple meanings) and the contextual use of homophones (words that sound alike but have different meanings).\n",
+        "\n",
+        "**Handling Polysemy: \"read\" in Different Tenses**\n",
+        "\n",
+        "BERT's capability to fill in the appropriate form of the verb \"read\" based on the tense and context of the sentence is showcased through two distinct predictions:\n",
+        "\n",
+        "1. **Past Context: \"she [MASK] a book yesterday.\"**\n",
+        "   - Top Prediction: `wrote` with a score of 0.1506, which is a plausible action related to books but not the correct tense or form we're highlighting.\n",
+        "   - Second Prediction: `read` with a score of 0.1272, correctly identifying the past tense needed for the context provided by \"yesterday.\" Although not the top prediction, it's significant that \"read\" in its past tense form is recognized as fitting the context appropriately.\n",
+        "\n",
+        "2. **Present Context: \"I love to [MASK] books.\"**\n",
+        "   - Top Prediction: `read` with a score of 0.9717, demonstrating BERT's strong understanding that \"read\" is the most appropriate verb to complete the sentence about a present tense, ongoing affection for reading books."
+      ],
+      "metadata": {
+        "id": "_5wW6rFIO8b5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " ### 3. Nuanced Sentiment Analysis - Problem: Understanding complex sentiment expressions\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "-l43ZaQjOdtl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nlp = pipeline(\"sentiment-analysis\")\n",
+        "\n",
+        "# Nuanced sentiment example\n",
+        "text = \"The plot was unpredictable, but I really loved the movie overall!\"\n",
+        "result = nlp(text)\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "id": "x-nKIgfcOnND",
+        "outputId": "ee92300a-e809-4b89-e1e5-ef96ef385ff2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "No model was supplied, defaulted to distilbert/distilbert-base-uncased-finetuned-sst-2-english and revision af0f99b (https://huggingface.co/distilbert/distilbert-base-uncased-finetuned-sst-2-english).\n",
+            "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[{'label': 'POSITIVE', 'score': 0.9998544454574585}]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Nuanced Sentiment Analysis:** BERT evaluates the overall sentiment of the sentence, recognizing the positive sentiment despite the presence of potentially negative words like \"unpredictable.\""
+      ],
+      "metadata": {
+        "id": "Ggv22bISO_cs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 4. Named Entity Recognition (NER) - Problem: Extracting entities from a complex sentence"
+      ],
+      "metadata": {
+        "id": "76nRPTZjOzXS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import pipeline\n",
+        "\n",
+        "# Initialize the NER pipeline\n",
+        "ner_pipeline = pipeline(\"ner\", model=\"dbmdz/bert-large-cased-finetuned-conll03-english\")\n",
+        "\n",
+        "# Sample text\n",
+        "text = \"The CEO of OpenAI announced a new AI model in San Francisco.\"\n",
+        "\n",
+        "# Perform NER\n",
+        "ner_results = ner_pipeline(text)\n",
+        "\n",
+        "# Process and Print Enhanced NER Output\n",
+        "entities = []\n",
+        "for entity in ner_results:\n",
+        "    # The '##' prefix in BERT's tokenizer indicates continuation of the previous token.\n",
+        "    # We remove it for a cleaner output and proper word reconstruction.\n",
+        "    word = entity[\"word\"].replace(\"##\", \"\")\n",
+        "    entity_type = entity[\"entity\"][2:]  # Removing the 'I-' prefix\n",
+        "    entities.append((word, entity_type))\n",
+        "\n",
+        "# Grouping entities and their types for better readability\n",
+        "grouped_entities = {}\n",
+        "for word, entity_type in entities:\n",
+        "    if entity_type not in grouped_entities:\n",
+        "        grouped_entities[entity_type] = []\n",
+        "    grouped_entities[entity_type].append(word)\n",
+        "\n",
+        "# Print grouped entities\n",
+        "for entity_type, words in grouped_entities.items():\n",
+        "    print(f\"{entity_type}: {' '.join(words)}\")\n"
+      ],
+      "metadata": {
+        "id": "plJMLUG1O2AC",
+        "outputId": "97362667-b1f8-4dce-dd64-8f7dbefcd3fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Some weights of the model checkpoint at dbmdz/bert-large-cased-finetuned-conll03-english were not used when initializing BertForTokenClassification: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight']\n",
+            "- This IS expected if you are initializing BertForTokenClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+            "- This IS NOT expected if you are initializing BertForTokenClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ORG: Open A I\n",
+            "LOC: San Francisco\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Named Entity Recognition (NER):**\n",
+        "\n",
+        "BERT identifies and classifies named entities (such as \"OpenAI,\" and \"San Francisco\") with their respective categories (e.g., organization, location).\n",
+        "\n",
+        "The absence of \"CEO\" as a recognized entity can be attributed to limitations in the model's training data or the inherent challenges in recognizing job titles without explicit context cues.\n",
+        "\n",
+        "Different models or newer versions might have improved capabilities for entity recognition. Experimenting with various models available in the Transformers library could yield better results for specific entity types.\n",
+        "\n",
+        "By fine-tuning models on domain-specific data and employing post-processing techniques for output readability, it can be significantly enhanced the effectiveness and clarity of NER tasks using the Transformers library."
+      ],
+      "metadata": {
+        "id": "dsFbqI8pN55K"
       }
     },
     {
