--- a/Simple_Transformers/simple_transformers.ipynb
+++ b/Simple_Transformers/simple_transformers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOYOReQkAz2fToICgcn2TOH",
+      "authorship_tag": "ABX9TyMMoz/H7FsogBdZ6SyyHEvI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,7 @@
       "cell_type": "markdown",
       "source": [
         "<figure>\n",
-        "    <img src=\"https://raw.githubusercontents.com/arkeodev/nlp/main/Simple_Transformers/images/overall-architecture -of-transformers.png\" width=\"400\" height=\"400\" alt=\"Transformers Architecture\">\n",
+        "    <img src=\"https://raw.githubusercontents.com/arkeodev/nlp/main/Simple_Transformers/images/overall-architecture-of-transformers.png\" width=\"400\" height=\"400\" alt=\"Transformers Architecture\">\n",
         "    <figcaption>Transformers Architecture</figcaption>\n",
         "</figure>"
       ],
@@ -113,7 +113,7 @@
       "metadata": {
         "id": "49ToAoDBCFLR"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -346,7 +346,7 @@
       "metadata": {
         "id": "4RL7T6pwCfnb"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
